--- a/src/assets/css/main.styl
+++ b/src/assets/css/main.styl
@@ -175,3 +175,35 @@
 .hover-cursor-pointer
   &:hover
     cursor pointer
+
+
+// ---------------------
+// Resources
+// ---------------------
+.resource
+  .resource-icon
+    background-image url('../img/resources.png')
+    width 50px
+    height 50px
+
+    &.resource-mana
+      background-position 0 -50px
+
+    &.resource-fury
+      background-position -50px 0
+
+    &.resource-hatred-discipline
+      background-position -100px 0
+
+    &.resource-spirit
+      background-position -50px -50px
+
+    &.resource-arcane-power
+      background-position -100px -50px
+
+    &.resource-wrath
+      background-position 0 -100px
+
+    &.resource-essence
+      background-position -50px -100px
+
